[API doc] Fixed sidebar scrollbar

--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -21,6 +21,7 @@ $header-height: 64px;
 
   #sidebar {
     top: $header-height;
+    height: auto;
   }
 
   #docs {
